# jollyroger

./: .cdb  .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  reinstall  requirements.txt  setup.py
JRTransport/: CMakeLists.txt
JRTransport/cmake/: CPackConfig.cmake  JRTransportConfig.cmake
JRTransport/doc/: documentation-config.doxygen.in  release-notes.dox  technical-overview.dox  welcome.dox
JRTransport/include/: CMakeLists.txt
JRTransport/include/JRStore/: HashID.h  Store.h
JRTransport/include/JRTransport/: AuthCallData.h  CMakeLists.txt  CallDataBase.h  Client.h  Node.h  PingCallData.h  Server.h  ServerImpl.h  Version.h.in  World.h  transport.grpc.pb.h  transport.pb.h
JRTransport/include/JRUtils/: CMakeLists.txt  MPMCQueue.h
JRTransport/protos/: compile  transport.proto
JRTransport/src/: AuthCallData.cxx  CMakeLists.txt  CallDataBase.cxx  Client.cxx  Node.cxx  PingCallData.cxx  Server.cxx  ServerImpl.cxx  World.cxx  main.cxx  transport.grpc.pb.cc  transport.pb.cc
JRTransport/src/JRStore/: HashID.cxx  Store.cxx
JRTransport/src/JRTransport/: AuthCallData.cxx  CallDataBase.cxx  Client.cxx  Node.cxx  PingCallData.cxx  Server.cxx  main.cxx
JRTransport/test/: CMakeLists.txt  testHashIDImpl.cxx  testJRTransport.cxx  testMPMCQueue.cxx  testServerImpl.cxx  testStoreImpl.cxx
ProjB/: CMakeLists.txt
ProjB/doc/: documentation-config.doxygen.in
ProjB/include/ProjB/: Version.h.in  World.h
ProjB/src/: CMakeLists.txt  World.cxx  main.cxx
ProjB/test/: testProjB.cxx
cmake/: Common.cmake  FindGRPC.cmake
examples/: dht_processing_x.py  dht_processing_y.py  dht_processing_z.py
jdht/: #cachedb.py#  #config.py#  .#cachedb.py  __init__.py  cachedb.py  config.py  managers.py  networkio.py  utility.py  virtual_co.py
jdht/stun/: __init__.py  __init__.py~
src/: main.py
src/stun/: __init__.py
src/tasks/: networkio.py
src/upnp/: #__main__.py#  __main__.py  igd_test.py  miniupnpc-1.7-py2.7.egg-info
tests/: dht1.py  dht2.py  dht3.py  dht3.py~
